--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angular/angular-cache.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ng-cordova/ng-cordova.min.js"></script>
