--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,8 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular/angular-cache.min.js"></script>
 
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3&sensor=false&language=en"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ng-cordova/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
